<resources>
    <string name="app_name">P-1VeterinariaSãoPedro</string>
    <string name="sempre_a_pensar_na_sa_de_e_bem_estar_dos_nossos_animais_de_companhia">Sempre a pensar na saúde e bem estar dos nossos animais de companhia!</string>
    <string name="hor_rio_segunda_a_sexta_10h_20h_s_bado_9h_17h_domingos_e_feriados_encerrados">Horário: Segunda a Sexta:10H-20H. Sábado:9H-17H. Domingos e Feriados:Encerrados.</string>
    <string name="marca_o_de_consultas_295_628_982">Marcação de Consultas:295 628 982</string>
    <string name="servi_o_de_urg_ncia_963_237_544">Serviço de Urgência: 963 237 544</string>
    <string name="morada_caminho_de_baixo_no_4_s_o_pedro_angra_do_heroismo">Morada: Caminho de Baixo No. 4. São Pedro-Angra do Heroismo.</string>
</resources>
